* google functions now use enc2utf8() to better handle foreign character
  sets. (#98, #89, thanks dapper2dan)
* google functions now better handle special characters. (#104, thanks
  casa-henrym)
* gglocator now properly works again. (#87, thanks @salah31416 and @mvkorpel)
* README images moved from figures/ to tools/
* mutate_geocode() now works with tibbles (#68, thanks dannguyen)


ggmap 2.6.1
-------------------------------------------------------------------------

FIXES

* fixes a bug in qmplot that gives the error "Error in unlist(.all_aesthetics[1:42]) :
  object '.all_aesthetics' not found". (thanks to @Hughan.)
* gglocator now properly adapts to scaling. (thanks to @Nikolai-Hlubek)


ggmap 2.6
-------------------------------------------------------------------------

NEW FEATURES

* geocode now has a force option to override cached values. (#69, thanks
@samfield)
* get_map now accepts as its location the result of geocode (you'll still
need to specify the zoom, it doesn't do that for you).

CHANGES

* get_googlemap now properly parses the scale argument.
* geocode now (again) defaults to source = "google" due to poor experiences
with dsk.

FIXES

* non-square map-images are now parsed properly. (#17, reported by @jonnybaik,
@krmlr, @dannguyen)

* geocode now returns typed NAs when geocoding fails.  this may help geocoding
in certain data structures. (#66, reported by @botanize)



ggmap 2.5
-------------------------------------------------------------------------

NEW FEATURES

* geocode can now get its information from datasciencetoolkit.org.  As this is
legally less restrictive than Google (and doesn't have a limit!), this is the
default method of geolocation in ggmap.  be careful with colloquial addresses
(e.g. "baylor university") though; google is much better at geocoding those than
dsk.

* maps now include meta data attributes containing their source, type, and zoom.

* ggmap objects now have a simple console print method describing them.

CHANGES
